# alpha_othello

./: .gitignore  .gitmodules  Dockerfile  README.md  alpha_othello.db  circle_demo.py  circles.db  evolutionary_tree.html  packings.txt  pyproject.toml  scratch.py
src/alpha_othello/: database.py  evaluate.py  llm.py  main.py  workers.py
src/alpha_othello/circle_packing/: Dockerfile  eval.py  initial.py  skeleton.txt  vis.py
src/alpha_othello/database/: abstract.py  base.py  database.py
src/alpha_othello/llm/: skeleton.py
src/alpha_othello/othello/: ai.py  board.py  docker.py  eval.py  eval.txt  game.py  skeleton.txt  types.py  util.py
