[project]
name = "alpha_othello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "multiprocess>=0.70.18",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "othello",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "pygments>=2.19.1",
    "pygraphviz>=1.14",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
othello = { git = "https://github.com/alfredclwong/othello" }
alpha-othello = { workspace = true }

[dependency-groups]
dev = [
    "alpha-othello",
]
